Realizado el readme de Flex

--- a/flex/practicaMaquetacionFlex.html
+++ b/flex/practicaMaquetacionFlex.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos3.css" />
+    <link rel="stylesheet" href="/css/estilos3.css" />
     <!--Sergio Bau Nieto-->
     <title>Titulo a modificar</title>
     <!-- Control K Control C -->
@@ -36,27 +36,27 @@
                 <div>Contacto</div>
             </nav>
             <article>
-                <img src="media/cloud.png" width="300" height="400" alt="Imagen de cloud">
+                <img src="/media/cloud.png" width="300" height="400" alt="Imagen de cloud">
                 <p class="poppins">Protagonista del videojuego Final fantasy VII</p>
             </article>
 
             <article>
-                <img src="media/Zack.webp" width="300" height="400" alt="Imagen de Zack">
+                <img src="/media/Zack.webp" width="300" height="400" alt="Imagen de Zack">
                 <p class="poppins">Otro personaje de Final Fantasy VII</p>
             </article>
         </section>
 
         <section id="segundo-section">
             <article>
-                <img src="media/celebi.png" width="300" height="400" alt="">
+                <img src="/media/celebi.png" width="300" height="400" alt="">
                 <p class="poppins">Imagen de Pokémon celebi</p>
             </article>
             <article>
-                <img src="media/yveltal.png" width="300" height="400" alt="">
+                <img src="/media/yveltal.png" width="300" height="400" alt="">
                 <p class="poppins">Imagen de Pokémon yveltal</p>
             </article>
             <article>
-                <img src="media/pikachu.png" width="300" height="400" alt="">
+                <img src="/media/pikachu.png" width="300" height="400" alt="">
                 <p class="poppins">Imagen de pikachu</p>
             </article>
         </section>
@@ -72,9 +72,9 @@
             <a class="poppins">Hecho por Sergio a modo de repaso</a>
         </div>
         <div>
-            <img src="media/bobEsponja.jpg" width="100" height="100" alt="Imagen de bobEsponja">
-            <img src="media/goku.png" width="100" height="100" alt="Imagen de Goku">
-            <img src="media/hamburguesa.jpg" width="100" height="100" alt="Imagen de una hamburguesa">
+            <img src="/media/bobEsponja.jpg" width="100" height="100" alt="Imagen de bobEsponja">
+            <img src="/media/goku.png" width="100" height="100" alt="Imagen de Goku">
+            <img src="/media/hamburguesa.jpg" width="100" height="100" alt="Imagen de una hamburguesa">
         </div>
     </footer>
 </body>
