--- a/grid/maquetacionGRID_Practica01.html
+++ b/grid/maquetacionGRID_Practica01.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Sergio Bau Nieto">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos4.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Yuji+Mai&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
             </nav>
 
             <picture>
-                <img id="primer_imagen" src="media/cloud.png" alt="">
+                <img id="primer_imagen" src="/media/cloud.png" alt="">
                 <figcaption class="lacquer-regular">
                     Cloud Strife es un personaje central de la serie de videojuegos <br> Final Fantasy VII. Es el
                     protagonista principal de Final Fantasy VII
@@ -46,7 +46,7 @@
             </picture>
 
             <picture>
-                <img id="segunda_imagen" src="media/Zack.webp" alt="">
+                <img id="segunda_imagen" src="/media/Zack.webp" alt="">
                 <figcaption class="lacquer-regular">Zack Fair fue un joven y valiente SOLDADO de 1.ª clase <br> que
                     luchó en la
                     guerra
@@ -57,15 +57,15 @@
 
         <section id="segundo_contenedor">
             <picture>
-                <img id="tercera_imagen" src="media/celebi.png" alt="">
+                <img id="tercera_imagen" src="/media/celebi.png" alt="">
                 <figcaption class="lacquer-regular">Pokemon Celebi</figcaption>
             </picture>
             <picture>
-                <img id="cuarta_imagen" src="media/yveltal.png" alt="">
+                <img id="cuarta_imagen" src="/media/yveltal.png" alt="">
                 <figcaption class="lacquer-regular">Pokemon Yveltal</figcaption>
             </picture>
             <picture>
-                <img id="quinta_imagen" src="media/pikachu.png" alt="">
+                <img id="quinta_imagen" src="/media/pikachu.png" alt="">
                 <figcaption class="lacquer-regular">Pokemon Pikachu</figcaption>
             </picture>
         </section>
